--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,14 +1,12 @@
-<header class="grid-middle">
-  <div class="col-6_sm-12">
-    <!-- <img class="logo" src="/images/logo.png" alt="Laura Treganowan"> -->
-  </div>
-  <div class="col-6_sm-12 mob-hide">
-    <nav class="right">
-      <a class="scroll-to" href="#intro-banner"> Home </a>
-      <a class="scroll-to" href="#about-banner"> About </a>
-      <a class="scroll-to" href="#process"> Process  </a>
-      <a class="scroll-to" href="#portfolio-banner"> Portfolio </a>
-      <a class="scroll to" href="#register">Contact</a>
+<header>
+    <nav class="grid-middle-center centered">
+      <i class="fa fa-angle-left" aria-hidden="true"></i>
+      <a class="scroll-to" href="/#intro-banner"> Home </a>
+      <a class="scroll-to" href="/#about-banner"> About </a>
+      <a class="scroll-to" href="/#process"> Process  </a>
+      <a class="scroll-to" href="/#portfolio-banner"> Portfolio </a>
+      <a class="scroll to" href="/#register">Contact</a>
+      <a  href="blog.html">Blog</a>
+      <i class="fa fa-angle-right" aria-hidden="true"></i>
     </nav>
-  </div>
 </header>
