--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 title: Shop
 ---
 
-<section class="tall grid">
+<section class="tall grid feedpost">
 
-  <div class="col-8_sm-12 post-body">
+  <div class="col-8_sm-12 post-body feedpost">
       <h1> {{page.title}} </h1>
       <p class="post-meta">{{page.date | date_to_string }} | Written by {{page.author}}</p>
       <img class="full-width" src="{{page.image_path}}">
@@ -14,11 +14,9 @@ title: Shop
 
       <hr>
 
-      <div class="social-share">
-        <h4> Did you <i class="fa fa-heart featured"></i> this? Share it on ... </h4>
+      <div class="social-share feedpost">
+        <h4> Did you <i class="fa fa-heart featured feedpost"></i> this? Share it on ... </h4>
         <nav>
-            <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter">
-                <i class="fa fa-twitter"></i>Twitter
             </a>
             <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
                 <i class="fa fa-facebook"></i>Facebook
@@ -31,11 +29,11 @@ title: Shop
 
   </div>
 
-  <div class="col-4_sm-12 mob-hide sidebar">
+  <div class="col-4_sm-12 mob-hide sidebar feedpost">
       <div>
-        <h3> This is a sidebar box </h3>
+        <h3 class ="feedpost"> This is a sidebar box </h3>
         <p> You can edit the content of the sidebar box in your post layout. </p>
-        <img src="/images/yoga-1.jpg">
+        <img src="/images/me.jpg">
       </div>
       <div>
         <p> You could put anything you want in here, like links to your social or featured articles, a newsletter signup, etc </p>
