--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,16 +1,18 @@
 <footer>
   <div>
-    <p> Website create by: me! </p>
+    <p><i class="fa fa-copyright" aria-hidden="true"></i>Laura Treganowan </p>
   </div>
 
 
   <div>
-    <nav>
+    <nav class ="nav-menu">
+      <i class="fa fa-angle-left" aria-hidden="true"></i>
       <a class="scroll-to" href="#intro-banner"> Home </a>
       <a class="scroll-to" href="#about-banner"> About </a>
       <a class="scroll-to" href="#process"> Process  </a>
       <a class="scroll-to" href="#portfolio-banner"> Portfolio </a>
       <a class="scroll-to" href="#register">Contact</a>
+      <i class="fa fa-angle-right" aria-hidden="true"></i>
     </nav>
   </div>
 
@@ -19,7 +21,7 @@
     <nav class="social-nav">
       <a href="https://www.facebook.com/laura.treganowan"> <i class="fa fa-facebook" aria-hidden="true"></i></i> </a>
       <a href="https://www.instagram.com/lauratregz/"> <i class="fa fa-instagram"> </i></a>
-      <a href="https://www.lauraswholeheart.com"> <i class="fa fa-laptop"></i></a>
+      <a href="/blog.html"> <i class="fa fa-laptop"></i></a>
     </nav>
   </div>
 
