--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,14 +15,14 @@ title: Shop
       <hr>
 
       <div class="social-share feedpost">
-        <h4> Did you <i class="fa fa-heart featured feedpost"></i> this? Share it on ... </h4>
-        <nav>
+        <h4 class="feedpost"> Did you <i class="fa fa-heart featured"></i> this? Share it on ... </h4>
+        <nav class="feedpost">
             </a>
             <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
                 <i class="fa fa-facebook"></i>Facebook
             </a>
-            <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+">
-              <i class="fa fa-google-plus"></i>Google +
+            <a href="https://www.pinterest.com/{{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Pinterest">
+              <i class="fa fa-pinterest-p" aria-hidden="true"></i></i>Pinterest
             </a>
         </nav>
       </div>
@@ -31,12 +31,19 @@ title: Shop
 
   <div class="col-4_sm-12 mob-hide sidebar feedpost">
       <div>
-        <h3 class ="feedpost"> This is a sidebar box </h3>
-        <p> You can edit the content of the sidebar box in your post layout. </p>
-        <img src="/images/me.jpg">
+        <h3 class ="feedpost"> Da Blog </h3>
+        <p> Life through my lens. This is where I talk nerdy to you.  </p>
+        <img src="/images/happy.jpg">
       </div>
       <div>
-        <p> You could put anything you want in here, like links to your social or featured articles, a newsletter signup, etc </p>
+        <p> <div>
+          <nav class="social-nav">
+            <a href= "https://www.linkedin.com/in/laura-treganowan-8659038a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/laura.treganowan"> <i class="fa fa-facebook" aria-hidden="true"></i></i> </a>
+            <a href="https://www.instagram.com/lauratregz/"> <i class="fa fa-instagram"> </i></a>
+            <a href="/blog.html"> <i class="fa fa-laptop"></i></a>
+          </nav>
+        </div> </p>
       </div>
   </div>
 </section>
