--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -1,3 +1,3 @@
-<section class="no-padding">
-<!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/54395ab15ffd569abd07559b020566c5.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+<section class="no-padding mob-hide">
+<!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/67f87520de5b5aecbd15125178311284.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
 </section>
