--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,12 +1,32 @@
 <header>
-    <nav class="grid-middle-center centered">
-      <i class="fa fa-angle-left" aria-hidden="true"></i>
+  <nav>
+    <div class="burger-menu">
+    <i class="fa fa-code" aria-hidden="true"></i>
+    <a class="scroll-to" href="/#intro-banner"> Home </a>
+    <a class="scroll-to" href="/#about-banner"> About </a>
+    <a class="scroll-to" href="/#process"> Process  </a>
+    <a class="scroll-to" href="/#portfolio-banner"> Portfolio </a>
+    <a class="scroll to" href="/#register">Contact</a>
+    <a  href="blog.html">Blog</a>
+    <i class=" fa fa-code" aria-hidden="true"></i>
+  </div>
+  </nav>
+
+    <nav class="grid-middle-center">
+      <div class="col mob-hide">
+      <i class="fa fa-code" aria-hidden="true"></i>
       <a class="scroll-to" href="/#intro-banner"> Home </a>
       <a class="scroll-to" href="/#about-banner"> About </a>
       <a class="scroll-to" href="/#process"> Process  </a>
       <a class="scroll-to" href="/#portfolio-banner"> Portfolio </a>
       <a class="scroll to" href="/#register">Contact</a>
       <a  href="blog.html">Blog</a>
-      <i class="fa fa-angle-right" aria-hidden="true"></i>
+      <i class=" fa fa-code" aria-hidden="true"></i>
+    </div>
     </nav>
 </header>
+<div class="burger-button mob-show">
+          <span class="burger-top"></span>
+          <span class="burger-middle"></span>
+          <span class="burger-bottom"></span>
+      </div>
