--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -11,7 +11,7 @@
     <i class=" fa fa-code" aria-hidden="true"></i>
   </div>
   </nav>
-
+<!--
     <nav class="grid-middle-center">
       <div class="col mob-hide">
       <i class="fa fa-code" aria-hidden="true"></i>
@@ -23,7 +23,7 @@
       <a  href="blog.html">Blog</a>
       <i class=" fa fa-code" aria-hidden="true"></i>
     </div>
-    </nav>
+    </nav> -->
 </header>
 <div class="burger-button mob-show">
           <span class="burger-top"></span>
