--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
     <meta property="og:image" content="{{page.featured-image_path}}">
     <meta property="og:url" content="{{page.url}}">
     <meta name="twitter:card" content="{{page.meta-description}}">
-    <meta name="og:site_name" content="<!-- ADD SITE NAME HERE -->">
+    <meta name="og:site_name" content= <Laura Treganowan>
 
 <!-- end of meta tags -->
 
@@ -47,7 +47,7 @@
 
     <!-- CUSTOM STYLESHEETS - This should always be the last stylesheet in your head -->
     <link rel="stylesheet" href="/css/main.css">
-  
+
 
 <!-- end stylesheets -->
 
