--- a/_includes/body-scripts.html
+++ b/_includes/body-scripts.html
@@ -1,10 +1,10 @@
-<!-- These are the scripts that will be placed just before the closing body tag on every page. -->
+
 
 
 <script src="js/jquery.js"></script>
 
 
-<!-- This is your file with custom javascript or jquery -->
+<!-- custom javascript or jquery -->
 
 <script src="js/jquery.js"></script>
 <script src="js/owl.carousel.min.js"></script>
