--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -4,8 +4,7 @@
     <i class="fa fa-code" aria-hidden="true"></i>
     <a class="scroll-to" href="/#intro-banner"> Home </a>
     <a class="scroll-to" href="/#about-banner"> About </a>
-    <a class="scroll-to" href="/#process"> Process  </a>
-    <a class="scroll-to" href="/#portfolio-banner"> Portfolio </a>
+    <a class="scroll-to" href="/portfolio.html"> Portfolio </a>
     <a class="scroll to" href="/#register">Contact</a>
     <a  href="blog.html">Blog</a>
     <i class=" fa fa-code" aria-hidden="true"></i>
