--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -9,6 +9,7 @@
       <i class="fa fa-code" aria-hidden="true"></i>
       <a class="scroll-to" href="/#intro-banner"> Home </a>
       <a class="scroll-to" href="/#about-banner"> About </a>
+      <a class="scroll-to" href="/blog"> Blog </a>
 
       <a class="scroll-to" href="/#portfolio-banner"> Portfolio </a>
       <a class="scroll-to" href="/#register">Contact</a>
