--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ title: Shop
 
 <section class="tall feedpost">
 
-  <div class=post-body feedpost">
+  <div class="post-body feedpost">
       <h1> {{page.title}} </h1>
       <p class="post-meta">{{page.date | date_to_string }} | Written by {{page.author}}</p>
       <img class="full-width" src="{{page.image_path}}">
