--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -6,7 +6,7 @@
     <a class="scroll-to" href="/#about-banner"> About </a>
     <a class="scroll-to" href="/portfolio.html"> Portfolio </a>
     <a class="scroll to" href="/#register">Contact</a>
-    <a  href="blog.html">Blog</a>
+    <a  href="/blog.html">Blog</a>
     <i class=" fa fa-code" aria-hidden="true"></i>
   </div>
   </nav>
