--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -10,10 +10,9 @@
       <a class="scroll-to" href="/#intro-banner"> Home </a>
       <a class="scroll-to" href="/#about-banner"> About </a>
       <a class="scroll-to" href="/blog"> Blog </a>
-
       <a class="scroll-to" href="/#portfolio-banner"> Portfolio </a>
-      <a class="scroll-to" href="/#register">Contact</a>
-      <i class="fa fa-code" aria-hidden="true"></i>
+      <a class="scroll-to" href="/#contact">Contact</a>
+
     </nav>
   </div>
 
