--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,13 +1,11 @@
 <header>
   <nav>
     <div class="burger-menu">
-    <i class="fa fa-code" aria-hidden="true"></i>
     <a class="scroll-to" href="/#intro-banner"> Home </a>
     <a class="scroll-to" href="/#about-banner"> About </a>
     <a class="scroll-to" href="/portfolio.html"> Portfolio </a>
-    <a class="scroll to" href="/#register">Contact</a>
+    <a class="scroll to" href="/#contact">Contact</a>
     <a  href="/blog.html">Blog</a>
-    <i class=" fa fa-code" aria-hidden="true"></i>
   </div>
   </nav>
 
