--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,7 @@
 
     <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
 
     <!-- Gridlex for a simple flexbox grid -->
