--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,12 +1,19 @@
 <header>
   <nav>
-    <div class="burger-menu">
+    <div class="burger-menu left">
     <a class="scroll-to" href="/#intro-banner"> Home </a>
     <a class="scroll-to" href="/#about-banner"> About </a>
     <a class="scroll-to" href="/portfolio.html"> Portfolio </a>
-    <a class="scroll to" href="/#contact">Contact</a>
+    <a class="scroll-to" href="/#contact">Contact</a>
     <a  href="/blog.html">Blog</a>
-  </div>
+    </div>
+
+    <nav class="social-nav centered">
+      <a target="blank" href= "https://www.linkedin.com/in/laura-treganowan-8659038a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+      <a target="blank" href="https://www.facebook.com/laura.treganowan"> <i class="fa fa-facebook" aria-hidden="true"></i></i> </a>
+      <a target="blank" href="https://www.instagram.com/lauratregz/"> <i class="fa fa-instagram"> </i></a>
+    </nav>
+
   </nav>
 
 </header>
