--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,18 +1,6 @@
 <footer>
   <div>
-    <p><i class="fa fa-copyright" aria-hidden="true"></i> 2017 - Laura Treganowan  </p>
-  </div>
-
-
-  <div>
-    <nav class ="nav-menu">
-      <a class="scroll-to" href="/#intro-banner"> Home </a>
-      <a class="scroll-to" href="/#about-banner"> About </a>
-      <a class="scroll-to" href="/blog"> Blog </a>
-      <a class="scroll-to" href="/#portfolio-banner"> Portfolio </a>
-      <a class="scroll-to" href="/#contact">Contact</a>
-
-    </nav>
+    <p>Copyright Laura Treganowan 2017</p>
   </div>
 
 </footer>
