--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -7,11 +7,12 @@
 
   <nav>
     <div class="burger-menu left">
-    <a class="scroll-to" href="/#intro-banner"> Home </a>
-    <a class="scroll-to" href="/#about-banner"> About </a>
-    <a class="scroll-to" href="/portfolio.html"> Portfolio </a>
-    <a class="scroll-to" href="/#contact">Contact</a>
+    <a  href="/index.html"> Home </a>
+    <a  href="/about.html"> About </a>
+    <a  href="/portfolio.html"> Portfolio </a>
     <a  href="/blog.html">Blog</a>
+    <a  href="/contact">Contact</a>
+
     </div>
 
   </nav>
@@ -21,4 +22,4 @@
           <span class="burger-top"></span>
           <span class="burger-middle"></span>
           <span class="burger-bottom"></span>
-      </div>
+</div>
