--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ img {max-width: 100%;}
 .full-width { width:100%}
 
 /* Lists */
-ul      { list-style: circle inside; color:black;}
+ul      { list-style: circle inside; color:rgb(60,60,65);}
 ol      { list-style: decimal inside;}
 ol, ul  { padding-left: 0;
           margin-top: 0; }
@@ -57,30 +57,30 @@ li      { margin-bottom: 0.5rem; }
 /* Typography */
 body {
     font-family: 'Quicksand', sans-serif;
-    color: black;
+    color: rgb(60,60,65);
 }
 
 h1, h2, h3, h4, h5 {
   font-family: 'Quicksand', sans-serif;
-  color: black;
+  color: rgb(60,60,65);
+  margin-bottom: 1.1rem;
   }
 
-p {
-  color: black;
-  font-size: 1.1rem; line-height: 1.5;
-}
-a {color: black;}
-
-h1 { font-size: 6.0rem; line-height: 1.2;}
-h2 { font-size: 5.5rem; line-height: 1.25;}
-h3 { font-size: 3.5rem; line-height: 1.3;}
-h4 { font-size: 2.5rem; line-height: 1.35;}
-h5 { font-size: 2.0rem; line-height: 1.35; margin:0.5rem;}
+h1 { font-size: 3.0rem; line-height: 1.2; }
+h2 { font-size: 2.4rem; line-height: 1.25; }
+h3 { font-size: 2.0rem; line-height: 1.3; }
+h4 { font-size: 1.8rem; line-height: 1.35; }
+h5 { font-size: 1.7rem; line-height: 1.5; }
+h6 { font-size: 1.5rem; line-height: 1.5; }
+p  { font-size: 1.1rem; line-height: 1.5; margin-bottom: 1rem;}
+blockquote  { font-size: 1.1rem; line-height: 1.5;}
+li  { font-size: 1.1rem; }
 
 .fa {font-size: 3.5rem;}
 
 
 /* Padding & Margin */
+
 section{
 /*padding: 5vh 5%;*/
 }
@@ -96,7 +96,7 @@ section{
 
 /* ----- HEADER & FOOTER --------------------------- */
 nav {
-  color: black;
+  color: rgb(60,60,65);
   vertical-align: middle;
 }
 
@@ -163,7 +163,7 @@ header, footer  {
   margin: 1em auto;
   display: inline-block;
   text-decoration: none;
-  color: black;
+  color: rgb(60,60,65);
 }
 .button:hover {
   font-weight: semi-bold;
@@ -195,22 +195,22 @@ header, footer  {
 .feedpost h3{
 font-size: 2.0rem;
 line-height: 1.3;
-color: black;
+color: rgb(60,60,65);
 text-transform: none;
 text-decoration: none;
 }
 .feedpost p {
-  color:black;
+  color:rgb(60,60,65);
   text-decoration: none;
   text-transform: none;
 }
 .feedpost h1{
-  color: black;
+  color: rgb(60,60,65);
   font-size: 2.0rem;
   line-height: 1.3;
 }
 .feedpost h4, h5, nav, a{
-  color:black;
+  color:rgb(60,60,65);
   text-transform: none;
 }
 
@@ -238,7 +238,7 @@ div.colorback {
 
   .burger-button span{
     width: 25px;
-    border: 2px solid black;
+    border: 2px solid rgb(60,60,65);
     display: block;
     border-radius: 22px;
     transition: 2s;
