--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -1,3 +1,3 @@
-<section class="no-padding mob-hide">
+<section class="mob-hide">
 <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/69b80a8a61685719b2666a4c924238e9.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
 </section>
