--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
 
 
     <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
 
