--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,8 @@ body {
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: bold;
   color: rgb(60,60,65);
   margin-bottom: 1.1rem;
   }
@@ -227,11 +228,7 @@ ol, ul  { padding-left: 0;
           margin-top: 0; }
 li      { margin-bottom: 0.5rem; }
 
-
-div.colorback {
-    background-color: rgba(136, 136, 136, 0.8);
-  }
-
+/* Hamburger Menu */
   .burger-button {
     position:fixed;
     top: 2vh;
