--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ p  { font-size: 1.1rem; line-height: 1.5; margin-bottom: 1rem;}
 blockquote  { font-size: 1.1rem; line-height: 1.5;}
 li  { font-size: 1.1rem; }
 
-.fa {font-size: 2.5rem;}
+.fa {font-size: 2.0rem;}
 
 
 /* Padding & Margin */
@@ -119,7 +119,7 @@ button-inverted:hover{
 }
 
 header .fa {
-  font-size: 2em;
+  font-size: 2.0rem;
   display:inline-block;
 }
 
