--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -11,7 +11,7 @@
     <div class="burger-menu left">
     <a  href="/index.html"> Home </a>
     <a  href="/about.html"> About </a>
-    <a  href="/portfolio.html"> Portfolio </a>
+    <a  href="/portfolio.html"> Work </a>
     <a  href="/blog.html">Blog</a>
     <a  href="/contact">Contact</a>
 
