--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,8 @@ img {max-width: 100%;}
 .centered-text, .center-text     { text-align: center; }
 .right-text     { text-align: right; }
 
+.centered {align-items: center}
+
 .no-padding { padding: 0; }
 
 .mob-show { display: none;}
