--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@ nav a:hover {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
-button-inverted:hover{
+button:hover{
   color: #FBB7C0;
 }
 
@@ -167,20 +167,18 @@ header, footer  {
  button,
 .button,
 .button-inverted {
-  background-color: #grey;
-  border: none;
-  border-radius: 5px;
+  background-color: none;
+  border: 1px solid rgb(60,60,65);
   padding: 0.5em 3em;
   margin: 1em auto;
   display: inline-block;
   text-decoration: none;
   color: rgb(60,60,65);
+  text-transform: uppercase;
 }
 .button:hover {
   font-weight: semi-bold;
-  background-color: #FBB7C0;
-
-
+  border: 2px solid rgb(60,60,65);
 }
 .relative{
   position:relative;
@@ -205,6 +203,8 @@ header, footer  {
 #test-pic {
   background-image: url("../images/biggie.jpg");
   background-size: cover;
+  min-height: 10vh;
+  padding: 1vh;
 }
 
 /* BLOG STYLES*/
