--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -7,7 +7,7 @@
 
   </nav>
 
-  <nav class="no-padding">
+  <nav>
     <div class="burger-menu left">
     <a  href="/index.html"> Home </a>
     <a  href="/about.html"> About </a>
