--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,7 @@ header, footer  {
 }
 
 hr {
-  1px solid #FBB7C0;
+  color: 1px solid #FBB7C0;
 }
 .nav-menu .fa{
   font-size: 2.0rem;
@@ -217,6 +217,7 @@ line-height: 1.3;
 color: rgb(60,60,65);
 text-transform: none;
 text-decoration: none;
+font-family: 'Quicksand', sans-serif;
 }
 .feedpost p {
   color:rgb(60,60,65);
@@ -227,11 +228,13 @@ text-decoration: none;
   color: rgb(60,60,65);
   font-size: 2.0rem;
   line-height: 1.3;
+  font-family: 'Quicksand', sans-serif;
 }
 .feedpost h4, h5, nav, a{
   color:rgb(60,60,65);
   text-transform: none;
   text-decoration: none;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .feedpost a:hover {
