--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -3,11 +3,9 @@
     <a target="blank" href="https://www.facebook.com/laura.treganowan"> <i class="fa fa-facebook" aria-hidden="true"></i></i> </a>
     <a target="blank" href= "https://www.linkedin.com/in/laura-treganowan-8659038a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
     <a target="blank" href="https://www.instagram.com/lauratregz/"> <i class="fa fa-instagram"> </i></a>
-
-
   </nav>
 
-  <nav>
+  <!-- <nav>
     <div class="burger-menu left">
     <a  href="/index.html"> Home </a>
     <a  href="/portfolio.html"> Work </a>
@@ -16,7 +14,7 @@
 
     </div>
 
-  </nav>
+  </nav> -->
 
 </header>
 <div class="burger-button mob-show">
