--- a/css/main.css
+++ b/css/main.css
@@ -199,11 +199,11 @@ hr {
 
 .featured {
   background-color: #f5f5f5;
-  color: white;
+  color: rgb(60,60,65);
 }
 
 .quote {
-  padding: 10vh;
+  padding: 5vh;
 }
 
 
