--- a/css/main.css
+++ b/css/main.css
@@ -82,10 +82,10 @@ li  { font-size: 1.1rem; }
 .fa {font-size: 2.0rem;}
 
 .tagline {
-  font-family: 'Shadows Into Light', cursive;
+  font-family: 'Quicksand', sans-serif;
   font-size: 1rem;
   letter-spacing: 1px;
-  color: #FBB7C0;
+  color: rgb(219,84,97);
   padding: 0;
 }
 
@@ -121,12 +121,12 @@ nav a {
 }
 
 nav a:hover {
-  color: #FBB7C0;
+  color: rgb(219,84,97);
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
 button:hover{
-  color: #FBB7C0;
+  color: rgb(219,84,97);
 }
 
 header .fa {
@@ -144,7 +144,7 @@ footer {
 }
 
 hr {
-  color: 1px solid #FBB7C0;
+  color: 1px dotted rgb(219,84,97,0.5);
 }
 .nav-menu .fa{
   font-size: 2.0rem;
@@ -204,6 +204,9 @@ hr {
 
 .quote {
   padding: 5vh;
+  background-color: rgba(219,84,97,0.5);
+  color: white;
+  font-size:
 }
 
 
@@ -259,7 +262,7 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .feedpost a:hover {
-  color: #FBB7C0;
+  color: rgb(219,84,97);
 }
 
 
