--- a/css/main.css
+++ b/css/main.css
@@ -205,8 +205,10 @@ hr {
 .quote {
   padding: 5vh;
   background-color: rgba(219,84,97,0.5);
-  color: white;
-  font-size:
+  color: rgb(219,84,97);
+  font-size: 1.5rem;
+  letter-spacing: 2px;
+
 }
 
 
