--- a/css/main.css
+++ b/css/main.css
@@ -198,16 +198,18 @@ hr {
 .letterspace {letter-spacing: 2px;}
 
 .featured {
-  background-color: #f5f5f5;
+  background-color: rgba(219,84,97,0.5);
   color: rgb(60,60,65);
+  text-align: center;
 }
 
 .quote {
   padding: 5vh;
   background-color: rgba(219,84,97,0.5);
   color: rgb(219,84,97);
-  font-size: 1.5rem;
+  font-size: 2.0rem;
   letter-spacing: 2px;
+
 
 }
 
