--- a/css/main.css
+++ b/css/main.css
@@ -198,17 +198,17 @@ hr {
 .letterspace {letter-spacing: 2px;}
 
 .featured {
-  background-color: rgba(219,84,97,0.5);
+  background-color: #f5f5f5;
   color: rgb(60,60,65);
   text-align: center;
 }
 
 .quote {
   padding: 5vh;
-  background-color: rgba(219,84,97,0.5);
-  color: rgb(219,84,97);
+  background-color: rgb(219,84,97);
+  color: rgb(60,60,65);
   font-size: 2.0rem;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 
 
 }
