--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ footer {
 }
 
 hr {
-  color: 1px dotted rgb(219,84,97,0.5);
+  color: 3px dotted rgb(219,84,97);
 }
 .nav-menu .fa{
   font-size: 2.0rem;
@@ -205,11 +205,10 @@ hr {
 
 .quote {
   padding: 5vh;
-  background-color: rgb(219,84,97);
-  color: rgb(60,60,65);
-  font-size: 2.0rem;
+  background-color: #f5f5f5;
+  color: color: rgb(219,84,97);
+  font-size: 3.0rem;
   letter-spacing: 1px;
-
 
 }
 
