--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ body {
     color: rgb(60,60,65);
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4 {
   font-family: 'Shadows Into Light', cursive;
   font-weight: bold;
   color: rgb(60,60,65);
