--- a/css/main.css
+++ b/css/main.css
@@ -206,7 +206,7 @@ hr {
 .quote {
   padding: 5vh;
   background-color: #f5f5f5;
-  color: color: rgb(219,84,97);
+  color: rgb(219,84,97);
   font-size: 3.0rem;
   letter-spacing: 1px;
 
