--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,7 @@ header, footer  {
 
 footer {
   background-color: rgb(60,60,65);
+  color: white;
 }
 
 hr {
@@ -203,13 +204,16 @@ hr {
   text-align: center;
 }
 
+.fa .featured{
+  color:white;
+}
+h2.featured {
+  color:white;
+}
 .quote {
   padding: 5vh;
-  background-color: #f5f5f5;
-  color: rgb(219,84,97);
   font-size: 3.0rem;
   letter-spacing: 1px;
-
 }
 
 
