--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,6 +1,7 @@
 <header>
   <nav class="social-nav centered">
-    <a target="blank" href="https://www.facebook.com/laura.treganowan"> <i class="fa fa-facebook" aria-hidden="true"></i></i> </a>
+    <a href="/index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+    <a target="blank" href="https://www.facebook.com/laura.treganowan"><i class="fa fa-facebook" aria-hidden="true"></i></i> </a>
     <a target="blank" href= "https://www.linkedin.com/in/laura-treganowan-8659038a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
     <a target="blank" href="https://www.instagram.com/lauratregz/"> <i class="fa fa-instagram"> </i></a>
   </nav>
