--- a/css/main.css
+++ b/css/main.css
@@ -218,7 +218,8 @@ hr {
   letter-spacing: 1px;
 }
 .underline {
-  border-bottom: 1px solid rgb(255,105,180);
+  border-bottom: 1px dotted rgb(255,105,180);
+  border-bottom-width: 7vw; 
 }
 
 /*BACKGROUND IMAGES*/
