--- a/css/main.css
+++ b/css/main.css
@@ -218,9 +218,10 @@ hr {
   letter-spacing: 1px;
 }
 .underline {
-  border-bottom: 1px dotted rgb(255,105,180);
-  border-bottom-width: 15px; 
+  border-style: 1px dotted rgb(255,105,180);
+  border-bottom-width: 15px;
 }
+
 
 /*BACKGROUND IMAGES*/
 #intro-banner {
