--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,7 @@
     <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Over+the+Rainbow" rel="stylesheet">
 
 
     <!-- Gridlex for a simple flexbox grid -->
