--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -6,7 +6,7 @@
     <a target="blank" href="https://www.instagram.com/lauratregz/"> <i class="fa fa-instagram"> </i></a>
   </nav>
 
-  <!-- <nav>
+  <nav>
     <div class="burger-menu left">
     <a  href="/index.html"> Home </a>
     <a  href="/portfolio.html"> Work </a>
@@ -15,7 +15,7 @@
 
     </div>
 
-  </nav> -->
+  </nav>
 
 </header>
 <div class="burger-button mob-show">
