--- a/css/main.css
+++ b/css/main.css
@@ -68,10 +68,10 @@ h2, h3, h4, h5{
   text-transform: uppercase;
   color: rgb(60,60,65);
   margin-bottom: 1.1rem;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   }
 
-h1 { font-size: 3.0rem; line-height: 1.2; padding: 2px; font-family: 'Over the Rainbow', cursive;}
+h1 { font-size: 4.0rem; line-height: 1.2; padding: 2px; font-family: 'Shadows Into Light Two', cursive;}
 h2 { font-size: 2.4rem; line-height: 1.25; }
 h3 { font-size: 2.0rem; line-height: 1.3; }
 h4 { font-size: 1.8rem; line-height: 1.35; }
