--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,8 +32,7 @@
 
 
     <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Shadows+Into+Light+Two" rel="stylesheet">
 
 
 
