--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ h2, h3, h4, h5{
   letter-spacing: 1px;
   }
 
-h1 { font-size: 4.0rem; line-height: 1.2; padding: 2px; font-family: 'Shadows Into Light Two', cursive;}
+h1 { font-size: 4.0rem; line-height: 1.2; padding: 2px; font-family: 'Shadows Into Light Two', cursive; margin-top: -5vh;}
 h2 { font-size: 2.4rem; line-height: 1.25; }
 h3 { font-size: 2.0rem; line-height: 1.3; }
 h4 { font-size: 1.8rem; line-height: 1.35; }
