--- a/css/main.css
+++ b/css/main.css
@@ -64,15 +64,14 @@ body {
 }
 
 h2, h3, h4, h5{
-  font-weight: bold;
   text-transform: uppercase;
   color: rgb(60,60,65);
   margin-bottom: 1.1rem;
   letter-spacing: 1px;
   }
 
-h1 { font-size: 4.0rem; line-height: 1.2; padding: 2px; font-family: 'Shadows Into Light Two', cursive; margin-top: -5vh;}
-h2 { font-size: 2.4rem; line-height: 1.25; }
+h1 { font-size: 4.0rem; line-height: 1.2; padding: 2px; font-family: 'Shadows Into Light Two', cursive;}
+h2 { font-size: 2.4rem; line-height: 1.25; font-weight: bolder;}
 h3 { font-size: 2.0rem; line-height: 1.3; }
 h4 { font-size: 1.8rem; line-height: 1.35; }
 h5 { font-size: 1.7rem; line-height: 1.5; }
@@ -127,9 +126,7 @@ nav a:hover {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
-button:hover{
-  color: rgb(255,105,180);
-}
+
 
 header .fa {
   font-size: 2.0rem;
@@ -181,11 +178,10 @@ hr {
   display: inline-block;
   text-decoration: none;
   color: rgb(60,60,65);
-  text-transform: uppercase;
+
 }
 .button:hover {
-  font-weight: semi-bold;
-  border: 2px solid rgb(60,60,65);
+  transition-delay: 1s;
 }
 .relative{
   position:relative;
