--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,7 @@
 
     <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Shadows+Into+Light+Two" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
 
 
