--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ li      { margin-bottom: 0.5rem; }
 
 /* Typography */
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     color: rgb(60,60,65);
     background-color: #ffffff;
     background-image: url("https://www.transparenttextures.com/patterns/white-tiles.png");
@@ -71,12 +71,12 @@ h2, h3, h4, h5{
   }
 
 h1 { font-size: 4.0rem; line-height: 1.2; padding: 2px; font-family: 'Shadows Into Light Two', cursive;}
-h2 { font-size: 2.4rem; line-height: 1.25; font-weight: bolder;}
+h2 { font-size: 2.4rem; line-height: 1.25;}
 h3 { font-size: 2.0rem; line-height: 1.3; }
 h4 { font-size: 1.8rem; line-height: 1.35; }
 h5 { font-size: 1.7rem; line-height: 1.5; }
 h6 { font-size: 1.5rem; line-height: 1.5; }
-p  { font-size: 1.1rem; line-height: 1.5; margin-bottom: 1rem;}
+p  { font-size: 1.38rem; line-height: 1.5; margin-bottom: 1rem; font-weight: 300}
 blockquote  { font-size: 1.1rem; line-height: 1.5;}
 li  { font-size: 1.1rem; }
 
@@ -86,7 +86,7 @@ li  { font-size: 1.1rem; }
   font-family: 'Quicksand', sans-serif;
   font-size: 1rem;
   letter-spacing: 1px;
-  color: rgb(255,105,180);
+  color: #0B4F6C;
   padding: 0;
 }
 
@@ -122,7 +122,7 @@ nav a {
 }
 
 nav a:hover {
-  color: rgb(255,105,180);
+  color: #0B4F6C;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
@@ -141,7 +141,7 @@ header, footer  {
 
 
 hr {
-  color: 3px dotted rgb(255,105,180);
+  color: 3px dotted #0B4F6C;
 }
 .nav-menu .fa{
   font-size: 2.0rem;
@@ -216,7 +216,7 @@ hr {
   font-family: 'Shadows Into Light Two', cursive;
 }
 .underline {
-  border-bottom: 1px dotted rgb(255,105,180);
+  border-bottom: 1px dotted #0B4F6C;
 }
 
 
@@ -303,11 +303,11 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .feedpost a:hover {
-  color: rgb(255,105,180);
+  color: #0B4F6C;
 }
 
 .feedpost h5:hover {
-  color: rgb(255,105,180);
+  color: #0B4F6C;
 }
 
 
