--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ h3 { font-size: 2.0rem; line-height: 1.3; }
 h4 { font-size: 1.8rem; line-height: 1.35; }
 h5 { font-size: 1.7rem; line-height: 1.5; }
 h6 { font-size: 1.5rem; line-height: 1.5; }
-p  { font-size: 1.38rem; line-height: 1.5; margin-bottom: 1rem; font-weight: 300}
+p  { font-size: 1.2rem; line-height: 1.5; margin-bottom: 1rem; font-weight: 300}
 blockquote  { font-size: 1.1rem; line-height: 1.5;}
 li  { font-size: 1.1rem; }
 
@@ -86,7 +86,7 @@ li  { font-size: 1.1rem; }
   font-family: 'Quicksand', sans-serif;
   font-size: 1rem;
   letter-spacing: 1px;
-  color: #0B4F6C;
+  color: #4DA1A9;
   padding: 0;
 }
 
@@ -122,7 +122,7 @@ nav a {
 }
 
 nav a:hover {
-  color: #0B4F6C;
+  color: #4DA1A9;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
@@ -141,7 +141,7 @@ header, footer  {
 
 
 hr {
-  color: 3px dotted #0B4F6C;
+  color: 3px dotted #4DA1A9;
 }
 .nav-menu .fa{
   font-size: 2.0rem;
@@ -216,7 +216,7 @@ hr {
   font-family: 'Shadows Into Light Two', cursive;
 }
 .underline {
-  border-bottom: 1px dotted #0B4F6C;
+  border-bottom: 1px dotted #4DA1A9;
 }
 
 
@@ -303,11 +303,11 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .feedpost a:hover {
-  color: #0B4F6C;
+  color: #4DA1A9;
 }
 
 .feedpost h5:hover {
-  color: #0B4F6C;
+  color: #4DA1A9;
 }
 
 
