--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,7 @@
     <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Shadows+Into+Light+Two" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
 
 
