--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -3,10 +3,13 @@
 
     <a href="/index.html"><i class="fa fa-home home" aria-hidden="true"></i></a>
 
-  <nav class="social-nav centered">
+  <nav class="social-nav">
+    <div class="centered"><a href="/index.html"><i class="fa fa-home home" aria-hidden="true"></i></a></div>
+    <div class="centered">
     <a target="blank" href="https://www.facebook.com/laura.treganowan"><i class="fa fa-facebook" aria-hidden="true"></i></i> </a>
     <a target="blank" href= "https://www.linkedin.com/in/laura-treganowan-8659038a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
     <a target="blank" href="https://www.instagram.com/lauratregz/"> <i class="fa fa-instagram"> </i></a>
+  </div>
   </nav>
 
   <!-- <nav>
