--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,10 @@ img {max-width: 100%;}
 .centered-text, .center-text     { text-align: center; }
 .right-text     { text-align: right; }
 
+.left {
+  align-items: left;
+}
+
 .centered {align-items: center}
 
 .no-padding { padding: 0; }
@@ -57,7 +61,7 @@ li      { margin-bottom: 0.5rem; }
 
 /* Typography */
 body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     color: rgb(60,60,65);
     background-color: #ffffff;
     background-image: url("https://www.transparenttextures.com/patterns/white-tiles.png");
@@ -66,7 +70,7 @@ body {
 h2, h3, h4, h5{
   text-transform: uppercase;
   color: rgb(60,60,65);
-  margin-bottom: 1.1rem;
+  margin-bottom: 0.5rem;
   letter-spacing: 1px;
   }
 
@@ -76,7 +80,7 @@ h3 { font-size: 2.0rem; line-height: 1.3; }
 h4 { font-size: 1.8rem; line-height: 1.35; }
 h5 { font-size: 1.7rem; line-height: 1.5; }
 h6 { font-size: 1.5rem; line-height: 1.5; }
-p  { font-size: 1.2rem; line-height: 1.5; margin-bottom: 1rem; font-weight: 300}
+p  { font-size: 1.2rem; line-height: 1.5; margin-bottom: 1rem;}
 blockquote  { font-size: 1.1rem; line-height: 1.5;}
 li  { font-size: 1.1rem; }
 
@@ -88,6 +92,7 @@ li  { font-size: 1.1rem; }
   letter-spacing: 1px;
   color: #4DA1A9;
   padding: 0;
+  text-transform: uppercase;
 }
 
 /* Padding & Margin */
@@ -201,10 +206,11 @@ hr {
   text-align: center;
 }
 
-
-
 .featured .fa{
   color:white;
+}
+.featured .fa:hover {
+  color: #4DA1A9;
 }
 .featured h2 {
   color:white;
@@ -282,7 +288,6 @@ line-height: 1.3;
 color: rgb(60,60,65);
 text-transform: none;
 text-decoration: none;
-font-family: 'Quicksand', sans-serif;
 }
 .feedpost p {
   color:rgb(60,60,65);
@@ -293,13 +298,11 @@ font-family: 'Quicksand', sans-serif;
   color: rgb(60,60,65);
   font-size: 2.0rem;
   line-height: 1.3;
-  font-family: 'Quicksand', sans-serif;
 }
 .feedpost h4, h5, nav, a{
   color:rgb(60,60,65);
   text-transform: none;
   text-decoration: none;
-  font-family: 'Quicksand', sans-serif;
 }
 
 .feedpost a:hover {
@@ -389,7 +392,7 @@ li      { margin-bottom: 0.5rem; }
     font-size: 20px;
     font-weight: 300;
     color: #white;
-    font-family: 'Raleway'
+    font-family: 'Quicksand', sans-serif;
     display:block;
     padding:5px 15px;
     text-align:center;
