--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,5 +1,5 @@
 <header>
-<nav class="social-nav centered">
+<nav class="social-nav centered mob-hide">
     <a href="/index.html"><i class="fa fa-home home" aria-hidden="true"></i></a>
     <a target="blank" href="https://www.facebook.com/laura.treganowan"><i class="fa fa-facebook" aria-hidden="true"></i></i> </a>
     <a target="blank" href= "https://www.linkedin.com/in/laura-treganowan-8659038a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
@@ -7,15 +7,13 @@
 
   </nav>
 
-  <!-- <nav>
-    <div class="burger-menu left">
+  <nav>
+  <div class="burger-menu mob-show">
     <a  href="/index.html"> Home </a>
     <a  href="/portfolio.html"> Work </a>
     <a  href="/blog.html">Blog</a>
-    <a  href="/contact">Contact</a>
-
-    </div> -->
-
+    <a  href="/index.html">Contact</a>
+  </div>
   </nav>
 
 </header>
