--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,9 @@ header, footer  {
   background-color: white;
 }
 
-
+footer {
+  font-size: 0.5rem;
+}
 hr {
   border: 3px double #4DA1A9;
 }
@@ -220,8 +222,7 @@ hr {
 }
 .quote {
   padding: 5vh;
-  font-size: 3.0rem;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   font-family: 'Shadows Into Light Two', cursive;
 }
 .underline {
@@ -229,6 +230,9 @@ hr {
   border-width: inherit;
 }
 
+.quote .fa {
+  color: #4DA1A9;
+}
 
 
 
