--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div>
-    <p>Copyright Laura Treganowan 2017</p>
+    <p>Copyright 2017 | All Rights Reserved </p>
   </div>
 
 </footer>
