--- a/css/main.css
+++ b/css/main.css
@@ -70,11 +70,10 @@ body {
 h2, h3, h4, h5{
   text-transform: uppercase;
   color: rgb(60,60,65);
-  margin-bottom: 0.5rem;
   letter-spacing: 1px;
   }
 
-h1 { font-size: 4.0rem; line-height: 1.2; padding: 2px; font-family: 'Shadows Into Light Two', cursive;}
+h1 { font-size: 4.0rem; line-height: 1.2; padding: 2px; font-family: 'Shadows Into Light Two', cursive; margin-top: -10vh;}
 h2 { font-size: 2.4rem; line-height: 1.25;}
 h3 { font-size: 2.0rem; line-height: 1.3; }
 h4 { font-size: 1.8rem; line-height: 1.35; }
@@ -150,7 +149,7 @@ header{
 
 }
 hr {
-  border: 3px dotted #4DA1A9;
+  border: 1px dotted #4DA1A9;
 }
 .nav-menu .fa{
   font-size: 2.0rem;
