--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,7 @@ header{
 }
 hr {
   border: 1px dotted #4DA1A9;
+  margin-bottom: 1rem;
 }
 .nav-menu .fa{
   font-size: 2.0rem;
@@ -204,7 +205,7 @@ hr {
 .letterspace {letter-spacing: 2px;}
 
 .featured {
-  background-color: #353536;
+  background-color: rgba(53,53,54,0.5);
   color: white;
   text-align: center;
 }
