--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -7,18 +7,18 @@
 
   </nav>
 
-  <nav>
+  <!-- <nav>
   <div class="burger-menu mob-show">
     <a  href="/index.html"> Home </a>
     <a  href="/portfolio.html"> Work </a>
     <a  href="/blog.html">Blog</a>
     <a  href="/index.html">Contact</a>
   </div>
-  </nav>
+  </nav> -->
 
 </header>
-<div class="burger-button mob-show">
+<!-- <div class="burger-button mob-show">
           <span class="burger-top"></span>
           <span class="burger-middle"></span>
           <span class="burger-bottom"></span>
-</div>
+</div> -->
