--- a/css/main.css
+++ b/css/main.css
@@ -73,8 +73,8 @@ h2, h3, h4, h5{
   letter-spacing: 1px;
   }
 
-h1 { font-size: 4.0rem; line-height: 1.2; padding: 2px; font-family: 'Shadows Into Light Two', cursive; margin-top: -10vh;}
-h2 { font-size: 2.4rem; line-height: 1.25;}
+h1 { font-size: 4.0rem; line-height: 1.2; padding: 2px; font-family: 'Shadows Into Light Two', cursive; margin-top: -10vh; font-weight: bold;}
+h2 { font-size: 2.4rem; line-height: 1.25; font-weight: bold;}
 h3 { font-size: 2.0rem; line-height: 1.3; }
 h4 { font-size: 1.8rem; line-height: 1.35; }
 h5 { font-size: 1.7rem; line-height: 1.5; }
@@ -225,8 +225,11 @@ hr {
   font-family: 'Shadows Into Light Two', cursive;
 }
 .underline {
-  border-bottom: 2px dotted #4DA1A9;
-  border-bottom-width: inherit;
+border: none;
+border-bottom: 2px dotted #4DA1A9;
+width: 70px;
+margin: 0;
+margin-bottom: 1rem;
 }
 
 .quote .fa {
