--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ h2, h3, h4, h5{
   }
 
 h1 { font-size: 4.0rem; line-height: 1.2; padding: 2px; font-family: 'Shadows Into Light Two', cursive; margin-top: -10vh; font-weight: bold;}
-h2 { font-size: 2.4rem; line-height: 1.25; font-weight: bold;}
+h2 { font-size: 2.4rem; line-height: 1.25; font-weight: bolder;}
 h3 { font-size: 2.0rem; line-height: 1.3; }
 h4 { font-size: 1.8rem; line-height: 1.35; }
 h5 { font-size: 1.7rem; line-height: 1.5; }
@@ -152,6 +152,15 @@ hr {
   border: 1px dotted #4DA1A9;
   margin-bottom: 1rem;
 }
+
+hr.style1 {
+  border: none;
+  border-bottom: 2px dotted #4DA1A9;
+  width: 200px;
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
 .nav-menu .fa{
   font-size: 2.0rem;
 }
@@ -224,13 +233,7 @@ hr {
   letter-spacing: 2px;
   font-family: 'Shadows Into Light Two', cursive;
 }
-.underline {
-border: none;
-border-bottom: 2px dotted #4DA1A9;
-width: 70px;
-margin: 0;
-margin-bottom: 1rem;
-}
+
 
 .quote .fa {
   color: #4DA1A9;
