--- a/css/main.css
+++ b/css/main.css
@@ -94,8 +94,15 @@ li  { font-size: 1.1rem; }
   text-transform: uppercase;
   margin-left: 200px;
 }
-tagline .fa {
-  font-size: 2.0rem;
+
+
+.taglinecenter {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  color: #4DA1A9;
+  padding: 0;
+  text-transform: uppercase;
 }
 /* Padding & Margin */
 
